Temporary fix for sidebar gaps

--- a/app/assets/stylesheets/_editor.scss
+++ b/app/assets/stylesheets/_editor.scss
@@ -23,6 +23,10 @@
     font-size: $font-size-h3;
   }
 
+  [class^="ion-ios-gear"] {
+    font-size: $font-size-base;
+  }
+
   [class^="ion-person-stalker"] {
     margin-left: $spacing-unit / 4;
     font-size: $font-size-base;
